<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Name">Nombre</string>
    <string name="Categoria">Categoria</string>
    <string name="Fecha">Fecha</string>
    <string name="Comentario">Comentario</string>
    <string name="formulario">Formulario</string>
    <string name="Enviar">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
